--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1{
 .infophoto{
     background-image: url("vector-grey-background.jpg");
     border: 4mm ridge rgba(42, 54, 109, 0.6);
+    font-size: 20px;
 
 }
 
@@ -79,6 +80,8 @@ aside{
     margin: left;
     font-size: 25px;
     font-family: Tahoma;
+    border: 4mm ridge rgba(42, 54, 109, 0.6);
+    
 }
 
 div.section{
@@ -109,7 +112,8 @@ height: 1px;
 
 h2{
     font-size: 50px;
-    margin-top: 200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     text-align: center;
 }
 
@@ -130,9 +134,12 @@ h2{
 
 .cursus{
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
+    border: 4mm ridge rgba(42, 54, 109, 0.6);
 }
 
-.créations{
-
+.info-footer{
+    text-align: center;
+    font-size: 20px;
+    border: 4mm ridge rgba(42, 54, 109, 0.6);
 }
