--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html{
-    background-color: rgb(168, 168, 168);
+    background-image: url("/home/dev4/code/mon-cv/anime-background-images-1.jpg");
 }
 
 body{
     margin: 8em;
+
 }
 
 
@@ -15,7 +16,8 @@ header{
 
 
 h1{
-    background-image: url("abstract.jpg");
+    background-image: url("/home/dev4/code/mon-cv/blue-abstract-acrylic-brush-stroke-textured-background_53876-86373.jpg");
+    margin-top: 20px;
     height: 250px;
     padding: 6px;
     text-align: center;
@@ -115,6 +117,7 @@ h2{
     margin-top: 100px;
     margin-bottom: 100px;
     text-align: center;
+    background-color: rgb(72, 97, 131)
 }
 
 
@@ -136,6 +139,12 @@ h2{
     text-align: center;
     font-size: 30px;
     border: 4mm ridge rgba(42, 54, 109, 0.6);
+}
+
+.créations{
+    text-align: center;
+    font-size: 20px;
+    background-color: rgb(72, 97, 131);
 }
 
 .info-footer{
