--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h1{
     font-size: 30px;
     background-image: url("blue-abstract-acrylic-brush-stroke-textured-background_53876-86373.jpg");
     size: 100px;
+    padding: auto;
 
 }
 
@@ -126,7 +127,7 @@ aside .container{
 }
 
 div.section{
-    width: 2000px;
+    width: 1877px;
     height: 20px;
 }
 
@@ -147,6 +148,7 @@ h2{
     font-size: 50px;
     margin-top: 100px;
     margin-bottom: 100px;
+    padding: auto;
     text-align: center;
     background-color: rgb(72, 97, 131)
 }
