--- a/style.css
+++ b/style.css
@@ -115,6 +115,13 @@ aside .container{
     color: white;
 }
 
+.sociabilité {
+    width: 80%; background-color: rgb(24, 22, 59);
+}
+
+.équipe {
+    width: 70%; background-color: rgb(24, 22, 59);
+}
 
 .dessin {
     width: 80%; background-color: rgb(24, 22, 59);
@@ -138,10 +145,6 @@ margin: right;
 height: 1px;
 }
 
-
-
-
-  
 
 h2{
     font-size: 50px;
